# operating_systems

./: .gitignore
lecture1/: CMakeLists.txt
lecture1/.cache/clangd/index/: main.cpp.D9C53139B4469AFC.idx  memory.cpp.FED41A968F883B82.idx  single_thread.cpp.61D0A8B056AAE943.idx  thread_single.cpp.2408CDF2CFF9F608.idx
lecture1/src/: single_thread.cpp
lecture_1/src/: memory.cpp  single_thread.cpp
